Successful compile iperf and dynamic loading native libs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
+                cFlags "-I./iperf/ -I${projectDir}"
                 cppFlags ""
             }
         }
