--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -44,8 +44,8 @@ add_library( # Sets the name of the library.
         ${IPERF_SRC}/tcp_info.c
         ${IPERF_SRC}/timer.c
         ${IPERF_SRC}/units.c
-        ${CMAKE_SOURCE_DIR}/iperfJava.cpp
-        ${CMAKE_SOURCE_DIR}/IperfTest.cpp
+        ${CMAKE_SOURCE_DIR}/src/iperfJava.cpp
+        ${CMAKE_SOURCE_DIR}/src/IperfTest.cpp
         )
 
 # Searches for a specified prebuilt library and stores the path as a
