--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,10 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.13.0"
-    implementation 'ru.odnoklassniki:one-nio:1.2.0'
-    implementation 'com.implimentz:unsafe:0.0.6'
+    implementation 'com.faltenreich:textinputview:1.0.2'
+    implementation 'com.github.hamzaahmedkhan:SpinnerDialog:v1.0'
+    implementation 'com.github.savvyapps:ToggleButtonLayout:1.3.0'
+    implementation 'com.github.gratusik:AGIKSwipeButton:1.0.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
