--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.github.hamzaahmedkhan:SpinnerDialog:v1.0'
     implementation 'com.github.savvyapps:ToggleButtonLayout:1.3.0'
     implementation 'com.github.gratusik:AGIKSwipeButton:1.0.1'
+    implementation 'com.jayway.jsonpath:json-path:2.4.0'
+    implementation 'com.agrawalsuneet.androidlibs:squareloaderspack:0.5'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
