--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'com.github.gratusik:AGIKSwipeButton:1.0.1'
     implementation 'com.jayway.jsonpath:json-path:2.4.0'
     implementation 'com.agrawalsuneet.androidlibs:squareloaderspack:0.5'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
