--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.agrawalsuneet.androidlibs:squareloaderspack:0.5'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05'
+    implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
