--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -16,6 +16,8 @@ if ("${ANDROID_ABI}" MATCHES "arm64-v8a|x86_64")
 endif ()
 
 set(IPERF_SRC ${CMAKE_SOURCE_DIR}/iperf)
+set(IW_SRC ${CMAKE_SOURCE_DIR}/iw)
+
 set(UTF8_SRC ${CMAKE_SOURCE_DIR}/util/utf8)
 
 configure_file(${CMAKE_SOURCE_DIR}/../assets/iperf_config.h.in ${CMAKE_BINARY_DIR}/src/iperf_config.h)
@@ -51,6 +53,8 @@ add_library( # Sets the name of the library.
         ${UTF8_SRC}/core.h
         ${UTF8_SRC}/unchecked.h
         ${CMAKE_SOURCE_DIR}/util/utf8.h
+        ${IW_SRC}/connect.c
+        ${IW_SRC}/iw.c
         )
 
 # Searches for a specified prebuilt library and stores the path as a
