--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.13.0"
+    implementation "com.squareup.retrofit2:retrofit:2.6.2"
+    implementation "com.squareup.retrofit2:converter-moshi:2.6.2"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation 'com.faltenreich:textinputview:1.0.2'
     implementation 'com.github.hamzaahmedkhan:SpinnerDialog:v1.0'
     implementation 'com.github.savvyapps:ToggleButtonLayout:1.3.0'
@@ -67,7 +68,6 @@ dependencies {
     implementation 'com.agrawalsuneet.androidlibs:squareloaderspack:0.5'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-beta01'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-beta01'
-    implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
