--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.QUICKBOOT_POWERON" />
+    <!--android:networkSecurityConfig="@xml/network_security_config"-->
+    <!-- android:usesCleartextTraffic="true"-->
 
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
 
         <service
             android:name=".livemodel.scheduler.AlarmWiFiScanService"
-            android:label="Scan Service"
-            android:enabled="true" />
+            android:enabled="true"
+            android:label="Scan Service" />
 
         <!-- <receiver android:name=".livemodel.scheduler.WiFiServiceReceiver"
              android:enabled="true"
